--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "drivewise-fleet-frontend",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.0.2",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,19 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^11.2.6",
+    "lucide-react": "^0.447.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.28.0",
-    "framer-motion": "^11.2.6",
-    "lucide-react": "^0.447.0"
+    "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
+    "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
-    "vite": "^5.4.8",
-    "@vitejs/plugin-react": "^4.3.3"
+    "vite": "^5.4.8"
   }
 }
